--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -1,8 +1,9 @@
 name: CI DUBBD k3d
 
 on:
-  branches:
-    - test_k3d_fix
+  push:
+    branches:
+      - test_k3d_fix
   # pull_request:
   #   branches:
   #     - main
