feat: Updated references to loki dir in uds-core-aws to new s3 dir
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/aws/uds-core-aws/zarf.yaml
+++ b/aws/uds-core-aws/zarf.yaml
@@ -74,24 +74,24 @@ components:
       onCreate:
         before:
           - cmd: terraform get -update
-            dir: ../loki
+            dir: ../s3
     files:
-      - source: ../loki/.terraform
+      - source: ../s3/.terraform
         target: run/loki/.terraform
-      - source: ../loki/main.tf
+      - source: ../s3/main.tf
         target: run/loki/main.tf
-      - source: ../loki/variables.tf
+      - source: ../s3/variables.tf
         target: run/loki/variables.tf
-      - source: ../loki/output.tf
+      - source: ../s3/output.tf
         target: run/loki/output.tf
-      - source: ../loki/terraform.tfvars
+      - source: ../s3/terraform.tfvars
         target: run/loki/terraform.tfvars
   - name: execute-terraform
     required: true
     actions:
       onDeploy:
         before:
-          - cmd: "test -d ./loki/ && chmod -R ugo+rwx ./loki/ || echo $?"
+          - cmd: "test -d ./s3/ && chmod -R ugo+rwx ./s3/ || echo $?"
             dir: run
           - cmd: |
               terraform init -force-copy \
