--- a/aws/uds-core-aws/zarf.yaml
+++ b/aws/uds-core-aws/zarf.yaml
@@ -19,6 +19,8 @@ variables:
   - name: TERRAFORM_VERSION
   - name: TERRAFORM_PROVIDER_AWS_VERSION
 
+  - name: ZARF_VERSION
+
   - name: STATE_BUCKET_NAME
     description: "Name of the pre-existing Terraform state S3 bucket"
   - name: STATE_KEY
@@ -172,17 +174,17 @@ components:
     actions:
       onCreate:
         before:
-          - cmd: wget -nc https://github.com/defenseunicorns/zarf/releases/download/v0.27.1/zarf-init-amd64-v0.27.1.tar.zst
+          - cmd: "wget -nc https://github.com/defenseunicorns/zarf/releases/download/v###ZARF_PKG_TMPL_ZARF_VERSION###/zarf-init-amd64-v###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst"
             mute: true
             description: "Download Zarf Init Package"
       onDeploy:
         after:
           - cmd: mkdir -p run/zarf-init
-          - cmd: zarf p deploy ./zarf-init-amd64-v0.27.1.tar.zst --components git-server --confirm
+          - cmd: zarf p deploy ./zarf-init-amd64-v###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst --components git-server --confirm
             dir: run/zarf-init
     files:
-      - source: zarf-init-amd64-v0.27.1.tar.zst
-        target: run/zarf-init/zarf-init-amd64-v0.27.1.tar.zst
+      - source: zarf-init-amd64-v###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst
+        target: run/zarf-init/zarf-init-amd64-v###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst
   - name: load-certs
     required: true
     import:
