Remove EKS go test from CI and fix Zarf version and Renovate configuration.

--- a/aws/uds-core-aws/zarf-config.yaml
+++ b/aws/uds-core-aws/zarf-config.yaml
@@ -8,7 +8,8 @@ package:
       flux_version: "0.41.2"
       terraform_version: "1.4.2"
       terraform_provider_aws_version: 4.59.0
-      zarf_version: "0.27.1"
+      # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
+      zarf_version: "v0.27.1"
 
   deploy:
     set:
