--- a/.github/workflows/ci-on-pull-requests-cloudtrail.yaml
+++ b/.github/workflows/ci-on-pull-requests-cloudtrail.yaml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: aws/eks/test
+        working-directory: aws/cloudtrail/test
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -34,7 +34,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version-file: 'aws/eks/test/go.mod'
+          go-version-file: 'aws/cloudtrail/test/go.mod'
 
       - name: Set up gotestfmt
         uses: gotesttools/gotestfmt-action@v2
@@ -56,6 +56,7 @@ jobs:
           name: test-log
           path: /tmp/gotest.log
           if-no-files-found: error
+
   test-cloudtrail-zarf:
     runs-on: ubuntu-latest
 
@@ -65,7 +66,10 @@ jobs:
 
       - uses: ./.github/actions/create-zarf-package
         with:
+          username: ${{ secrets.REGISTRY1_USERNAME }}
+          password: ${{ secrets.REGISTRY1_PASSWORD }}
           working-dir: aws/cloudtrail
+          download-init-package: false
           timeout-minutes: 10
 
       - name: Deploy Cloudtrail
