--- a/.github/workflows/ci-on-pull-requests-cloudtrail.yaml
+++ b/.github/workflows/ci-on-pull-requests-cloudtrail.yaml
@@ -57,44 +57,45 @@ jobs:
           path: /tmp/gotest.log
           if-no-files-found: error
 
-  test-cloudtrail-zarf:
-    runs-on: ubuntu-latest
+  # Not running zarf test due to Cloudtrail limits per AWS account being 5
+  # test-cloudtrail-zarf:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
-          role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
-          aws-region: us-west-2
-          role-duration-seconds: 21600
+  #     - name: Configure AWS Credentials
+  #       uses: aws-actions/configure-aws-credentials@v2
+  #       with:
+  #         role-to-assume: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
+  #         role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
+  #         aws-region: us-west-2
+  #         role-duration-seconds: 21600
 
-      - uses: ./.github/actions/create-zarf-package
-        with:
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
-          working-dir: aws/cloudtrail
-          download-init-package: false
-          timeout-minutes: 10
+  #     - uses: ./.github/actions/create-zarf-package
+  #       with:
+  #         username: ${{ secrets.REGISTRY1_USERNAME }}
+  #         password: ${{ secrets.REGISTRY1_PASSWORD }}
+  #         working-dir: aws/cloudtrail
+  #         download-init-package: false
+  #         timeout-minutes: 10
 
-      - name: Deploy Cloudtrail
-        env:
-          SHA: ${{ github.sha }}
-        run: |
-          zarf package deploy zarf-package-*.tar.zst \
-            --set cloudtrail_name=cizarf-${SHA:0:5} \
-            --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/cloudtrail/${SHA:0:7}-zarf.tfstate" \
-            --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
-            --confirm
-        working-directory: aws/cloudtrail
-        timeout-minutes: 10
+  #     - name: Deploy Cloudtrail
+  #       env:
+  #         SHA: ${{ github.sha }}
+  #       run: |
+  #         zarf package deploy zarf-package-*.tar.zst \
+  #           --set cloudtrail_name=cizarf-${SHA:0:5} \
+  #           --set state_bucket_name="uds-ci-state-bucket" \
+  #           --set state_key="tfstate/ci/cloudtrail/${SHA:0:7}-zarf.tfstate" \
+  #           --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
+  #           --confirm
+  #       working-directory: aws/cloudtrail
+  #       timeout-minutes: 10
 
-      - name: Remove Cloudtrail
-        if: always()
-        run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: aws/cloudtrail
-        timeout-minutes: 10
+  #     - name: Remove Cloudtrail
+  #       if: always()
+  #       run: zarf package remove zarf-package-*.tar.zst --confirm
+  #       working-directory: aws/cloudtrail
+  #       timeout-minutes: 10
