chore: rebase+filter workflows

--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -10,8 +10,10 @@ on:
       - "**.md"
       - "**.json"
       - "aws/uds-core-aws/**"
+      - "aws/cloudtrail/**"
       - "k3d/**"
       - ".github/workflows/**k3d**.y*ml"
+      - ".github/workflows/**cloudtrail**.y*ml"
   workflow_call:
 
 jobs:
