--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -13,6 +13,7 @@ on:
       - "**.svg"
       - "aws/**"
       - ".github/workflows/**aws**.y*ml"
+      - ".github/workflows/**cloudtrail**.y*ml"
 
 jobs:
   test-release:
