ci: fix workflow paths to ignore uds

--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -14,6 +14,7 @@ on:
       - "aws/**"
       - ".github/workflows/**aws**.y*ml"
       - ".github/workflows/**cloudtrail**.y*ml"
+      - ".github/workflows/**uds**.y*ml"
 
 jobs:
   test-release:
