--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -14,6 +14,8 @@ on:
       - "k3d/**"
       - ".github/workflows/**k3d**.y*ml"
       - ".github/workflows/**cloudtrail**.y*ml"
+      - ".github/workflows/**uds**.y*ml"
+
   workflow_call:
 
 jobs:
