--- a/aws/uds-core-aws/zarf.yaml
+++ b/aws/uds-core-aws/zarf.yaml
@@ -25,7 +25,7 @@ variables:
     description: "Name of the pre-existing Terraform state S3 bucket"
   - name: STATE_DYNAMODB_TABLE_NAME
     description: "Name of the DynamoDB table used for Terraform state locking"
-  - name: STATE_KEY_LOKI
+  - name: STATE_KEY
     description: "Path to the state file key in the state bucket"
 
   - name: PRIVATE_ADMIN_LB
@@ -35,8 +35,8 @@ variables:
     description: "Provision a private/internal load balancer for the tenant ingress gateway"
     default: "true"
 
-  - name: LOKI_FORCE_DESTROY
-    description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data"
+  - name: EPHEMERAL
+    description: "Provide a means to force destroy Loki and Velero storage (S3) buckets even if it contains data"
     default: "false"
 
 components:
@@ -91,12 +91,10 @@ components:
     actions:
       onDeploy:
         before:
-          - cmd: "test -d ./loki/ && chmod -R ugo+rwx ./loki/ || echo $?"
-            dir: run
           - cmd: |
               terraform init -force-copy \
               -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
-              -backend-config="key=${ZARF_VAR_STATE_KEY_LOKI}" \
+              -backend-config="key=${ZARF_VAR_STATE_KEY}" \
               -backend-config="region=${ZARF_VAR_REGION}" \
               -backend-config="dynamodb_table=${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}"
             dir: run/loki
@@ -105,23 +103,6 @@ components:
           - cmd: sleep 15 #time to review
           - cmd: "terraform apply -var-file=tf-loki.tfvars -auto-approve"
             dir: run/loki
-      onRemove:
-        before:
-          - cmd: |
-              if [ -d "run/loki" ]; then
-                cd run/loki
-                if [ "$(terraform output force_destroy)" = true ]; then
-                  terraform destroy -var-file=tf-loki.tfvars -auto-approve
-                else
-                  echo "Skipping remove, force_destroy is set to false"
-                fi
-              else
-                echo "Cannot remove: run/loki directory does not exist"
-              fi
-  - name: loki-terraform-outputs
-    required: true
-    actions:
-      onDeploy:
         after:
           - cmd: "terraform output -raw s3_bucket"
             dir: run/loki
@@ -135,6 +116,19 @@ components:
             dir: run/loki
             setVariables:
               - name: LOKI_S3_ROLE_ARN
+      onRemove:
+        before:
+          - cmd: |
+              if [ -d "run/loki" ]; then
+                cd run/loki
+                if [ "$(terraform output force_destroy)" = true ]; then
+                  terraform destroy -var-file=tf-loki.tfvars -auto-approve
+                else
+                  echo "Skipping loki bucket removal, ephemeral is set to false"
+                fi
+              else
+                echo "Cannot remove bucket: run/loki directory does not exist"
+              fi
   - name: load-certs
     required: true
     import:
