feat: add cloudtrail (#339)
* feat: add cloudtrail

* feat: add cloudtrail

* chore: add zarf.yaml pieces for cloudtrail

* chore: add zarf.yaml pieces for cloudtrail

* chore: rm cloudtrail vars from dubbd-aws

* chore: add tf component, cleanup vars [ci skip]

* fix: [ci skip] outputs from module

* chore: imports for cloudtrail -> uds core

* ci: workflow changes to disable cloudtrail

* fix: null components on remove

* chore/ci: rework to be standalone, add CI

* fix: paths for workflows

* fix: fix envs

* fix: name length

* docs: comment

* fix: sp :cry:

* ci: comment out zarf workflow

* chore: rebase+filter workflows

* ci: fix workflow paths to ignore uds

* chore: switch to uds kms module

---------

Co-authored-by: Micah Nagel <micah.nagel@defenseunicorns.com>

--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -10,8 +10,12 @@ on:
       - "**.md"
       - "**.json"
       - "aws/uds-core-aws/**"
+      - "aws/cloudtrail/**"
       - "k3d/**"
       - ".github/workflows/**k3d**.y*ml"
+      - ".github/workflows/**cloudtrail**.y*ml"
+      - ".github/workflows/**uds**.y*ml"
+
   workflow_call:
 
 jobs:
