--- a/aws/external-dns/zarf.yaml
+++ b/aws/external-dns/zarf.yaml
@@ -14,6 +14,10 @@ variables:
 - name: DOMAIN
   description: "Name of domain to use for the DNS zone"
   default: "bigbang.dev"
+- name: HOSTED_ZONE_ID
+  description: "Hosted zone ID of the DNS zone"
+- name: ARN
+  description: "ARN"
 
 components:
   - name: external-dns-chart
@@ -31,4 +35,4 @@ components:
         valuesFiles:
         - ../values/aws-external-dns.yaml
     images:
-      - "registry1.dso.mil/ironbank/external-dns"
+      - "registry1.dso.mil/ironbank/external-dns:v0.13.4"
