--- a/aws/values/aws-external-dns.yaml
+++ b/aws/values/aws-external-dns.yaml
@@ -5,20 +5,11 @@ image:
   tag: "v0.13.4"
   pullPolicy: IfNotPresent
 
-imagePullSecrets: []
-
-rbac:
-  # Specifies whether RBAC resources should be created
-  create: true
-  additionalPermissions: []
-
 # Defaults to `ClusterFirst`.
 # Valid values are: `ClusterFirstWithHostNet`, `ClusterFirst`, `Default` or `None`.
 dnsPolicy:
 
 env: []
-
-topologySpreadConstraints: []
 
 logLevel: info
 logFormat: text
@@ -26,31 +17,26 @@ logFormat: text
 interval: 1m
 triggerLoopOnEvent: false
 
-namespaced: false
-
 sources:
   - service
-  - ingress
+  - istio-virtualservice
+  #- istio-gateway
 
 policy: upsert-only
 
 registry: txt
-txtOwnerId: ""
-txtPrefix: ""
+txtOwnerId: "###ZARF_VAR_HOSTED_ZONE_ID###"
+txtPrefix: "external-dns."
 txtSuffix: ""
 
 domainFilters: ["###ZARF_VAR_DOMAIN###"]
 
 provider: aws
 
-extraArgs: []
+extraArgs: 
+  - --aws-prefer-cname
 
-secretConfiguration:
-  enabled: false
-  mountPath: ""
-  subPath: ""
-  data: {}
-    # credentials: |
-    #   [default]
-    #   aws_access_key_id = $SECRET_ACCESS_KEY
-    #   aws_secret_access_key = $SECRET_ACCESS_KEY
+serviceAccount:
+  create: true
+  annotations:
+    eks.amazonaws.com/role-arn: "###ZARF_VAR_ARN###"
